CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


PROJECT(TimerWheel LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)

FILE(GLOB_RECURSE APP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

INCLUDE_DIRECTORIES(
        $(PROJECT_SOURCE_DIR)/src
)

#添加目标文件
ADD_EXECUTABLE(${PROJECT_NAME} ${APP_SRCS})